# park_manager

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  version
Doc/: HowToCompile.txt  PM.drawio  ReadMePMC.txt  ReadMePMTU.txt  ReadmePM.txt
examplePackageX86/Gate/: ClientConfig.ini  ClientConfig1.ini  GateClient  log   park_manager_client
examplePackageX86/PM/: ParkingManager  ServerConfig.ini  log   park_manager_server
examplePackageX86/TestUnit/: ClientConfigEnterence0.ini  ClientConfigEnterence1.ini  ClientConfigEnterence2.ini  ClientConfigExitCount0.ini  ClientConfigExitCount1.ini  ClientConfigExitCount2.ini  ParkingManager  TestUntis  run.txt
src/: CMakeLists.txt
src/CommonLibraries/: BoostShmObj.cpp  BoostShmObj.hpp  MessageManager.cpp  MessageManager.hpp  TimeMeasuring.h  WebScoket.h  common.h  logging.cpp  logging.hpp  utils.cpp  utils.hpp
src/CommonLibraries/includes/websocketpp/: uri.hpp
src/CommonLibraries/includes/websocketpp/impl/: endpoint_impl.hpp
src/CommonLibraries/includes/websocketpp/processors/: hybi13.hpp
src/CommonLibraries/includes/websocketpp/roles/: server_endpoint.hpp
src/CommonLibraries/json/: Base.hpp  CarEnterence.hpp  CarEnterenceResponse.hpp  CarStatusUpdate.hpp  CarStatusUpdateResponse.hpp  GateRegistration.hpp  GateRegistrationResponse.hpp  QuicktypeCommon.hpp  models.hpp
src/ParkManager/: CMakeLists.txt  Car.hpp  ParkManagerServer.cpp  ParkManagerServer.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
src/ParkManagerClient/: CMakeLists.txt  Gate.cpp  Gate.hpp  WebSocketClient.cpp  WebSocketClient.h  main.cpp
testUnits/: CMakeLists.txt  TestUnit.cpp
testUnits/ParkManagerUnitTests/: SCPM.cpp  SCPM.hpp  version.h
